Add Sydney banner image below About section, ensure profile photo is circular and fits frame

--- a/index.html
+++ b/index.html
@@ -193,6 +193,10 @@
         </div>
       </div>
     </section>
+    <!-- Sydney Banner Image -->
+    <div class="max-w-4xl mx-auto px-4 mb-12">
+      <img src="sydney-banner.jpg" alt="Sydney Harbour Bridge and Opera House at night" class="w-full rounded-2xl shadow-xl object-cover" style="max-height:340px; min-height:180px; background:#0A2540;" />
+    </div>
     <section id="kit" class="py-16 px-4 fade-in">
       <h2 class="text-3xl font-bold text-yellow-400 mb-8 text-center brand-heading">What’s in the Kit?</h2>
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-5xl mx-auto">
